[gd_scene load_steps=52 format=3 uid="uid://bfaumic22rjqp"]

[ext_resource type="Script" uid="uid://bc0yin40ve1m4" path="res://characters/player/player.gd" id="1_tl1e0"]
[ext_resource type="Texture2D" uid="uid://3fh5vkuyfg1o" path="res://assets/Textures/Tags/Boom.svg" id="2_5mkjs"]
[ext_resource type="Script" uid="uid://cqfnwmcldob7u" path="res://characters/character_mover.gd" id="2_lrtql"]
[ext_resource type="Texture2D" uid="uid://cgoc7ipvrwrw1" path="res://assets/Sprites/RANDY_CYCLE.png" id="3_5dc8e"]
[ext_resource type="Texture2D" uid="uid://dbm6ejbrb10j2" path="res://assets/Textures/Tags/BoomBox.svg" id="3_yybc7"]
[ext_resource type="Texture2D" uid="uid://csv2fhbukx8qn" path="res://assets/Sprites/RANDY_STANDINGSPRITE.png" id="4_5dc8e"]
[ext_resource type="Texture2D" uid="uid://prpds6a5m7qk" path="res://assets/Textures/Tags/HardFlip.svg" id="4_lv4bx"]
[ext_resource type="AudioStream" uid="uid://bbvt0wiw008tf" path="res://assets/Sounds/SFX/Spray Paint/Spray and Voice/Spray Hey Short.ogg" id="5_5mkjs"]
[ext_resource type="Texture2D" uid="uid://c4sfatrhm8id0" path="res://assets/Textures/Tags/Noise.svg" id="5_jgd8i"]
[ext_resource type="Texture2D" uid="uid://by1xy48sdeq27" path="res://assets/Textures/Tags/SprayCan.svg" id="6_7b6hw"]
[ext_resource type="AudioStream" uid="uid://brn8ojvqutdq0" path="res://assets/Sounds/SFX/Spray Paint/Spray and Voice/Spray Hell Yeah Short.ogg" id="6_yybc7"]
[ext_resource type="Texture2D" uid="uid://b1kers45olpn5" path="res://assets/Textures/Tags/Pigeon.svg" id="7_4cx7u"]
[ext_resource type="AudioStream" uid="uid://dw83fop5a5fep" path="res://assets/Sounds/SFX/Spray Paint/Spray and Voice/Spray Yeah Short 1.ogg" id="7_lv4bx"]
[ext_resource type="AudioStream" uid="uid://b0e3me5jbppc7" path="res://assets/Sounds/SFX/Spray Paint/Spray and Voice/Spray Yeah Short 2.ogg" id="8_jgd8i"]
[ext_resource type="AudioStream" uid="uid://blpwkvv22fold" path="res://assets/Sounds/SFX/Spray Paint/Spray and Voice/Spray Double Hey Medium.ogg" id="9_7b6hw"]
[ext_resource type="AudioStream" uid="uid://t0wxi62ep3yj" path="res://assets/Sounds/SFX/Spray Paint/Spray and Voice/Spray Hey Medium 1.ogg" id="10_4cx7u"]
[ext_resource type="AudioStream" uid="uid://gf4sbf8rjbsr" path="res://assets/Sounds/SFX/Spray Paint/Spray and Voice/Spray Hey Medium 2.ogg" id="11_w53g3"]
[ext_resource type="AudioStream" uid="uid://bn3txq0a6vuul" path="res://assets/Sounds/SFX/Spray Paint/Spray and Voice/Spray Yeah Medium 1.ogg" id="12_e0pgg"]
[ext_resource type="AudioStream" uid="uid://kx8augxfl14r" path="res://assets/Sounds/SFX/Spray Paint/Spray and Voice/Spray Yeah Medium 2.ogg" id="13_sbttr"]
[ext_resource type="AudioStream" uid="uid://bajn0laa62dhf" path="res://assets/Sounds/SFX/Spray Paint/Spray/Spray Medium 1.ogg" id="14_6pj1p"]
[ext_resource type="AudioStream" uid="uid://bwgb60csbs47j" path="res://assets/Sounds/SFX/Spray Paint/Spray/Spray Medium 2.ogg" id="15_3a7m8"]
[ext_resource type="AudioStream" uid="uid://co44og0ytp1wc" path="res://assets/Sounds/SFX/Spray Paint/Spray/Spray Medium 3.ogg" id="16_y3et5"]
[ext_resource type="AudioStream" uid="uid://csdfwffokdsy0" path="res://assets/Sounds/SFX/Randy/Grunts/Grunt 1.ogg" id="20_e0pgg"]
[ext_resource type="AudioStream" uid="uid://cp8j2y6bcdn1b" path="res://assets/Sounds/SFX/Randy/Grunts/Grunt 2.ogg" id="21_sbttr"]
[ext_resource type="AudioStream" uid="uid://b8gwtma6screu" path="res://assets/Sounds/SFX/Randy/Grunts/Grunt 3.ogg" id="22_6pj1p"]
[ext_resource type="AudioStream" uid="uid://o6120kk8e4xj" path="res://assets/Sounds/SFX/Randy/Grunts/Grunt 4.ogg" id="23_3a7m8"]
[ext_resource type="Texture2D" uid="uid://cnxxse03j0rvc" path="res://assets/SICK_MediaPack/SICK_logo_SVG.svg" id="25_sbttr"]
[ext_resource type="PackedScene" uid="uid://bqjwjwqjj721t" path="res://inv_quest.tscn" id="28_sbttr"]
[ext_resource type="Script" uid="uid://cy14wmeb4l1yt" path="res://scripts/pause_layer.gd" id="29_0mbv2"]
[ext_resource type="Texture2D" uid="uid://csr2xkfmfsxnm" path="res://assets/UI/new_UI/UI_2.1_BG-01.png" id="29_6pj1p"]
[ext_resource type="AudioStream" uid="uid://drhx8v4soe6kw" path="res://assets/Sounds/SFX/Randy/Run Cycle.ogg" id="29_sbttr"]
[ext_resource type="LabelSettings" uid="uid://b1tddn61dxn4b" path="res://assets/fonts/font.tres" id="30_y3et5"]
[ext_resource type="Texture2D" uid="uid://dli55l00rao0b" path="res://assets/UI/Quit_Color.png" id="32_0mbv2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_eqhpo"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_804w4"]

[sub_resource type="SphereShape3D" id="SphereShape3D_btcya"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i4rf3"]
atlas = ExtResource("3_5dc8e")
region = Rect2(0, 0, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_3syhb"]
atlas = ExtResource("3_5dc8e")
region = Rect2(450, 0, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dca5"]
atlas = ExtResource("3_5dc8e")
region = Rect2(900, 0, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_omc5b"]
atlas = ExtResource("3_5dc8e")
region = Rect2(1350, 0, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa0wh"]
atlas = ExtResource("3_5dc8e")
region = Rect2(1800, 0, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a0oi"]
atlas = ExtResource("3_5dc8e")
region = Rect2(2250, 0, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_muxsv"]
atlas = ExtResource("4_5dc8e")
region = Rect2(0, 0, 304, 396)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd1c4"]
atlas = ExtResource("3_5dc8e")
region = Rect2(0, 500, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dfjp"]
atlas = ExtResource("3_5dc8e")
region = Rect2(450, 500, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_qirdh"]
atlas = ExtResource("3_5dc8e")
region = Rect2(900, 500, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqvlo"]
atlas = ExtResource("3_5dc8e")
region = Rect2(1350, 500, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvr5t"]
atlas = ExtResource("3_5dc8e")
region = Rect2(1800, 500, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdudr"]
atlas = ExtResource("3_5dc8e")
region = Rect2(2250, 500, 450, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1phx"]
atlas = ExtResource("4_5dc8e")
region = Rect2(304, 0, 304, 396)

[sub_resource type="SpriteFrames" id="SpriteFrames_dirf7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4rf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3syhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dca5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omc5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa0wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a0oi")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_muxsv")
}],
"loop": true,
"name": &"back_stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd1c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dfjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qirdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqvlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvr5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdudr")
}],
"loop": true,
"name": &"forward",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1phx")
}],
"loop": true,
"name": &"forward_stand",
"speed": 5.0
}]

[node name="Player" type="CharacterBody3D"]
collision_mask = 11
script = ExtResource("1_tl1e0")
basic_tags = [ExtResource("2_5mkjs"), ExtResource("3_yybc7"), ExtResource("4_lv4bx"), ExtResource("5_jgd8i"), ExtResource("6_7b6hw"), ExtResource("7_4cx7u")]
basic_tag_sounds = Array[AudioStream]([ExtResource("5_5mkjs"), ExtResource("6_yybc7"), ExtResource("7_lv4bx"), ExtResource("8_jgd8i"), ExtResource("9_7b6hw"), ExtResource("10_4cx7u"), ExtResource("11_w53g3"), ExtResource("12_e0pgg"), ExtResource("13_sbttr"), ExtResource("14_6pj1p"), ExtResource("15_3a7m8"), ExtResource("16_y3et5")])
jump_sfx = Array[AudioStream]([ExtResource("20_e0pgg"), ExtResource("21_sbttr"), ExtResource("22_6pj1p"), ExtResource("23_3a7m8")])

[node name="CharacterMover" type="Node3D" parent="."]
script = ExtResource("2_lrtql")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_eqhpo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_804w4")

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
shape = SubResource("SphereShape3D_btcya")
spring_length = 3.0

[node name="POVCam" type="Camera3D" parent="CameraPivot/SpringArm3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.983785, 0.179352, 0, -0.179352, 0.983785, 0, 0, 0)
cull_mask = 524287
current = true

[node name="TagCast" type="RayCast3D" parent="CameraPivot/SpringArm3D/POVCam"]
transform = Transform3D(1, 0, 0, 0, 0.983785, -0.179352, 0, 0.179352, 0.983785, 0, 0, 0)
target_position = Vector3(0, 0, -10)

[node name="reticle" type="Sprite3D" parent="CameraPivot/SpringArm3D/POVCam/TagCast"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, -3)
visible = false
billboard = 1
texture = ExtResource("25_sbttr")

[node name="reference_point" type="Marker3D" parent="CameraPivot/SpringArm3D/POVCam/TagCast"]

[node name="Label" type="Label" parent="CameraPivot"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "hi"

[node name="Label2" type="Label" parent="CameraPivot"]
visible = false
offset_top = 26.0
offset_right = 40.0
offset_bottom = 49.0
text = "hi"

[node name="AudioListener3D" type="AudioListener3D" parent="."]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
layers = 8
billboard = 1
texture_filter = 0
render_priority = 10
sprite_frames = SubResource("SpriteFrames_dirf7")
animation = &"forward_stand"
autoplay = "forward_stand"

[node name="InvQuest" parent="." instance=ExtResource("28_sbttr")]
visible = false

[node name="Inv_UI" parent="InvQuest" index="0"]
visible = false

[node name="GridContainer" parent="InvQuest/Inv_UI/CanvasLayer" index="1"]
visible = false

[node name="trash_count" parent="InvQuest/Inv_UI/CanvasLayer" index="2"]
visible = false

[node name="trash_label" parent="InvQuest/Inv_UI/CanvasLayer" index="3"]
visible = false

[node name="Pause" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseLayer" type="CanvasLayer" parent="Pause"]
visible = false
script = ExtResource("29_0mbv2")

[node name="Panel" type="Panel" parent="Pause/PauseLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseBG" type="Sprite2D" parent="Pause/PauseLayer/Panel"]
self_modulate = Color(1, 1, 1, 0.580392)
position = Vector2(320, 240)
scale = Vector2(0.24, 0.24)
texture = ExtResource("29_6pj1p")

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/PauseLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -180.0
offset_right = 240.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FullscreenLabel" type="Label" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Fullscreen:"
label_settings = ExtResource("30_y3et5")

[node name="FullscreenToggle" type="CheckButton" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../MasterVolumeSlider")
focus_next = NodePath("../MasterVolumeSlider")
focus_previous = NodePath("../QuitButton")

[node name="MasterVolumeLabel" type="Label" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
text = "Master Volume:"
label_settings = ExtResource("30_y3et5")

[node name="MasterVolumeSlider" type="HSlider" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../FullscreenToggle")
focus_neighbor_bottom = NodePath("../MusicVolumeSlider")
focus_next = NodePath("../MusicVolumeSlider")
focus_previous = NodePath("../FullscreenToggle")
min_value = -60.0
max_value = 0.0

[node name="MusicVolumeLabel" type="Label" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
text = "Music Volume:"
label_settings = ExtResource("30_y3et5")

[node name="MusicVolumeSlider" type="HSlider" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MasterVolumeSlider")
focus_neighbor_bottom = NodePath("../SFXVolumeSlider")
focus_next = NodePath("../SFXVolumeSlider")
focus_previous = NodePath("../MasterVolumeSlider")
min_value = -60.0
max_value = 0.0

[node name="SFXVolumeLabel" type="Label" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume:"
label_settings = ExtResource("30_y3et5")

[node name="SFXVolumeSlider" type="HSlider" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MusicVolumeSlider")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../MusicVolumeSlider")
min_value = -60.0
max_value = 0.0

[node name="Label2" type="Label" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
text = "    "
label_settings = ExtResource("30_y3et5")

[node name="Label3" type="Label" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
text = "    "
label_settings = ExtResource("30_y3et5")

[node name="Label4" type="Label" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
text = "    "
label_settings = ExtResource("30_y3et5")

[node name="QuitButton" type="Button" parent="Pause/PauseLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../SFXVolumeSlider")
focus_neighbor_bottom = NodePath("../FullscreenToggle")
focus_next = NodePath("../FullscreenToggle")
focus_previous = NodePath("../SFXVolumeSlider")
icon = ExtResource("32_0mbv2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -6.559
bus = &"SFX"

[node name="RunPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_sbttr")
bus = &"SFX"

[connection signal="toggled" from="Pause/PauseLayer/VBoxContainer/FullscreenToggle" to="Pause/PauseLayer" method="_on_fullscreen_toggle_toggled"]
[connection signal="value_changed" from="Pause/PauseLayer/VBoxContainer/MasterVolumeSlider" to="Pause/PauseLayer" method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="Pause/PauseLayer/VBoxContainer/MusicVolumeSlider" to="Pause/PauseLayer" method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="Pause/PauseLayer/VBoxContainer/SFXVolumeSlider" to="Pause/PauseLayer" method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="Pause/PauseLayer/VBoxContainer/QuitButton" to="Pause/PauseLayer" method="_on_quit_button_pressed"]

[editable path="InvQuest"]
[editable path="InvQuest/Inv_UI"]
[editable path="InvQuest/Inv_UI/CanvasLayer/GridContainer/Inv_UI_Slot"]
[editable path="InvQuest/Inv_UI/CanvasLayer/GridContainer/Inv_UI_Slot/ItemInfo"]
[editable path="InvQuest/Inv_UI/CanvasLayer/GridContainer/Inv_UI_Slot2"]
[editable path="InvQuest/Inv_UI/CanvasLayer/GridContainer/Inv_UI_Slot2/ItemInfo"]
[editable path="InvQuest/QuestManager"]
[editable path="InvQuest/QuestManager/QuestUI"]
